feat: integrate FormBold, update logo and links, and add Google Tag

--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
     <meta property="og:title" content="WhatsBot AI - Bots de WhatsApp Impulsados por IA" />
     <meta property="og:description" content="Transforma tu negocio con bots inteligentes de WhatsApp. Sin código, sin complicaciones." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo-botpress.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/logo-botpress.png" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17059411035"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17059411035');
+    </script>
   </head>
 
   <body>
