feat: update favicon to user's logo

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     fbq('track', 'PageView');
     </script>
     <!-- End Meta Pixel Code -->
+    <link rel="icon" href="/logo-botpress.png" />
   </head>
 
   <body>
