--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     </script>
     <!-- End Meta Pixel Code -->
     <link rel="icon" href="/logo-botpress.png" />
+    <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2025/09/29/23/20250929232320-FDI9R5JI.js" defer></script>
   </head>
 
   <body>
